static/css/styles.css
/* ... */
.m-btn-theme {
  color: #fff;
}

.m-btn-theme:hover {
  color: #fff;
  background: #151515;
}

.more-btn {
  color: #151515;
  font-weight: 600;
  position: relative;
  padding: 3px;
  display: inline-block;
  line-height: 18px;
  font-size: 13px;
  text-transform: uppercase;
  text-decoration: none !important;
  -webkit-transition: ease all 0.4s;
     -moz-transition: ease all 0.4s;
       -o-transition: ease all 0.4s;
          transition: ease all 0.4s;
}
.more-btn i {
  position: absolute;
  right: 0;
  top: 5px;
  opacity: 0;
  -webkit-transition: ease all 0.4s;
     -moz-transition: ease all 0.4s;
       -o-transition: ease all 0.4s;
          transition: ease all 0.4s;
}
.more-btn:hover {
  color: #000;
}
.more-btn:hover i {
  right: -20px;
  opacity: 1;
}

.m-btn-link {
  color: #444 !important;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 18px;
  font-weight: 200;
  position: relative;
  display: inline-block;
  text-decoration: none !important;
  -webkit-transition: ease all 0.3s;
     -moz-transition: ease all 0.3s;
       -o-transition: ease all 0.3s;
          transition: ease all 0.3s;
}
.m-btn-link:after {
  content: "";
  width: 100%;
  height: 40%;
  position: absolute;
  left: 0;
  bottom: 0;
  opacity: 0.5;
  -webkit-transition: ease all 0.3s;
     -moz-transition: ease all 0.3s;
       -o-transition: ease all 0.3s;
          transition: ease all 0.3s;
}
.m-btn-link:before {
  content: "";
  width: 0;
  height: 1px;
  position: absolute;
  right: 0;
  bottom: 0;
  opacity: 0.5;
  background: #444;
  -webkit-transition: ease all 0.3s;
     -moz-transition: ease all 0.3s;
       -o-transition: ease all 0.3s;
          transition: ease all 0.3s; 
}
.m-btn-link:hover {
  /*letter-spacing: 3px;*/
}
.m-btn-link:hover:after {
  width: 10px;
  left: -15px;
}

.m-btn-link:hover:before {
  width: 100%;
  transition-delay: 0.4s
}

.m-btn-link-white {
  color: #fff !important;
}
.m-btn-link-white:before {
  background: #fff;
}

/*---------------------------------
* sec-round
-----------------------------------*/
.sec-round {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.sec-round .full-height {
  height: 100%;
}
.sec-round .round-item:first-child {
  border-left: 1px solid rgba(153, 153, 153, 0.11);
}
.sec-round .round-item {
  float: left;
  width: 20%;
  height: 100%;
  box-sizing: border-box;
  border-right: 1px solid rgba(153, 153, 153, 0.11);
  height: 100%;
  position: relative;
}

/*---------------------------------
* 05. Header
-----------------------------------*/
.header-nav {
  top: 10px;
	padding: 15px 10px;
	-webkit-transition: all 0.2s ease;
	   -moz-transition: all 0.5s ease;
	   	 -o-transition: all 0.2s ease;
			    transition: all 0.2s ease;
}
.header-nav .navbar-toggler span {
  background: #fff;
}

.header-nav .navbar-brand {
  margin-left: 16rem;
	color: #fff;
	font-weight: 800;
	position: relative;
  font-size: 23px;
}
.header-nav .navbar-brand span {
	 width: 6px;
    height: 6px;
    border-radius: 50%;
    position: absolute;
    bottom: 12px;
    right: -9px;
    float: left;
}
.header-nav .navbar-nav > li {
	margin: 0 0 0 20px;
}
.header-nav .navbar-nav .nav-link {
  position: relative;
  padding: 0;
  display: inline-block;
  font-size: 12px;
  vertical-align: top;
  color: #ececec;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: 0.215em;
}
.header-nav .navbar-nav .nav-link:after {
	content: '';
	position: absolute;
	z-index: 10;
	width: 0;
  left: 0;
  right: 0;
  bottom: -5px;
  margin: auto;
	height: 1px;
	background: #fff;
	-webkit-transition: ease all 0.2s;
	   -moz-transition: ease all 0.2s;
		 -o-transition: ease all 0.2s;
			transition: ease all 0.2s;
	
}
.header-nav .navbar-nav .nav-link:hover:after,
.header-nav .navbar-nav .nav-link.active:after {
	width: 75%;
}

/*Navbar Toogle*/
.navbar-toggler {
  border: none;
  padding: 10px 6px;
  outline: none !important;
}
.navbar-toggler span {
  display: block;
  width: 22px;
  height: 2px;
  border-radius: 1px;
  background: #fff;
}
.navbar-toggler span + span {
  margin-top: 4px;
  width: 18px;
}
.navbar-toggler span + span + span {
  width: 10px;
}
/**/


.header-nav.fixed-header {
  top: 0;
  margin-top: 0;
  padding: 12px 10px;
  background: #111;
  box-shadow: 0px 1px 27px -3px rgba(0, 0, 0, 0.2);
}


@media (max-width: 991px){

  .header-nav {
    top: 0;
    padding:10px 15px;
  }
  .header-nav.fixed-header {
    padding:10px 15px;
  }
  .navbar-nav {
    padding-top: 5px;
  }
  .header-nav .navbar-nav > li {
    margin: 8px 0;
  }
  .header-nav .navbar-nav .nav-link {
    padding: 0;
  }
}

/*---------------------------------
* 06. Header option 2
-----------------------------------*/


.header-nav-white .navbar-nav .nav-link {
  color: #333;
  font-weight: 600;
}
.header-nav-white .navbar-nav .nav-link:after {
  background: #333;
}
.header-nav-white .navbar-brand {
  color: #333;
}

.header-nav-white.fixed-header {
  background: #fff;
}

.header-nav-white .move-name {
  margin-left: 1rem;
  -webkit-transition-property: margin-left;
    -webkit-transition-duration: 2s;
    /* Standard syntax */
    transition-property: margin-left;
    transition-duration: 2s;
}

.header-nav-white .navbar-toggler span {
  background: #333;
}


/*---------------------------------
* 06. Home Banner
-----------------------------------*/
.full-screen {
  min-height: 100vh;
}

.home-banner {
  position: relative;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: right center;
  -webkit-background-size: cover;
     -moz-background-size: cover;
       -o-background-size: cover;
          background-size: cover;
}

.home-banner .particles-js-canvas-el {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.4
}

.home-banner .home-text-center {
  position: relative;
  padding-left: 45px;
  z-index: 1;
}
/* ... */

